{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 66,
  "lineage": "d7023f30-4a95-68b2-68d6-f542b41963ad",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-dev-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/networkInterfaces/AP-server-dev-nic",
            "ip_configuration": [
              {
                "name": "AP-server-dev-nic-ip",
                "primary": true,
                "private_ip_address": "10.5.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/virtualNetworks/AP-vnet/subnets/AP-vnet-subnet-dev"
              }
            ],
            "location": "japanwest",
            "mac_address": "00-22-48-62-49-96",
            "name": "AP-server-dev-nic",
            "private_ip_address": "10.5.1.4",
            "private_ip_addresses": [
              "10.5.1.4"
            ],
            "resource_group_name": "AP-kthiramitsu",
            "virtual_machine_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Compute/virtualMachines/AP-server-dev"
          },
          "dependencies": [
            "azurerm_subnet.subnet-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm-stg-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/networkInterfaces/AP-server-stg-nic",
            "ip_configuration": [
              {
                "name": "AP-server-stg-nic-ip",
                "primary": true,
                "private_ip_address": "10.5.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/virtualNetworks/AP-vnet/subnets/AP-vnet-subnet-stg"
              }
            ],
            "location": "japanwest",
            "mac_address": "00-0D-3A-40-10-A5",
            "name": "AP-server-stg-nic",
            "private_ip_address": "10.5.2.4",
            "private_ip_addresses": [
              "10.5.2.4"
            ],
            "resource_group_name": "AP-kthiramitsu",
            "virtual_machine_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Compute/virtualMachines/AP-server-stg"
          },
          "dependencies": [
            "azurerm_subnet.subnet-stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "vm-dev-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/networkInterfaces/AP-server-dev-nic|/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/networkSecurityGroups/AP-server-dev-nsg",
            "network_interface_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/networkInterfaces/AP-server-dev-nic",
            "network_security_group_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/networkSecurityGroups/AP-server-dev-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.vm-dev-nic",
            "azurerm_network_security_group.vm-dev-nsg",
            "azurerm_subnet.subnet-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "vm-stg-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/networkInterfaces/AP-server-stg-nic|/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/networkSecurityGroups/AP-server-stg-nsg",
            "network_interface_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/networkInterfaces/AP-server-stg-nic",
            "network_security_group_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/networkSecurityGroups/AP-server-stg-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.vm-stg-nic",
            "azurerm_network_security_group.vm-stg-nsg",
            "azurerm_subnet.subnet-stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm-dev-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/networkSecurityGroups/AP-server-dev-nsg",
            "location": "japanwest",
            "name": "AP-server-dev-nsg",
            "resource_group_name": "AP-kthiramitsu",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm-stg-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/networkSecurityGroups/AP-server-stg-nsg",
            "location": "japanwest",
            "name": "AP-server-stg-nsg",
            "resource_group_name": "AP-kthiramitsu",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "AP-ERGW-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/publicIPAddresses/AP-ERGW-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.89.246.152",
            "ip_version": "IPv4",
            "location": "japanwest",
            "name": "AP-ERGW-pip",
            "resource_group_name": "AP-kthiramitsu",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "GatewaySubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.5.3.0/24",
            "address_prefixes": [
              "10.5.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/virtualNetworks/AP-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "AP-kthiramitsu",
            "virtual_network_name": "AP-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.5.1.0/24",
            "address_prefixes": [
              "10.5.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/virtualNetworks/AP-vnet/subnets/AP-vnet-subnet-dev",
            "name": "AP-vnet-subnet-dev",
            "resource_group_name": "AP-kthiramitsu",
            "virtual_network_name": "AP-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-stg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.5.2.0/24",
            "address_prefixes": [
              "10.5.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/virtualNetworks/AP-vnet/subnets/AP-vnet-subnet-stg",
            "name": "AP-vnet-subnet-stg",
            "resource_group_name": "AP-kthiramitsu",
            "virtual_network_name": "AP-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.5.0.0/16"
            ],
            "guid": "f81fa24a-7508-48f9-8179-5e333ba370bf",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/virtualNetworks/AP-vnet",
            "location": "japanwest",
            "name": "AP-vnet",
            "resource_group_name": "AP-kthiramitsu",
            "subnet": [
              {
                "address_prefix": "10.5.1.0/24",
                "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/virtualNetworks/AP-vnet/subnets/AP-vnet-subnet-dev",
                "name": "AP-vnet-subnet-dev"
              },
              {
                "address_prefix": "10.5.2.0/24",
                "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/virtualNetworks/AP-vnet/subnets/AP-vnet-subnet-stg",
                "name": "AP-vnet-subnet-stg"
              },
              {
                "address_prefix": "10.5.3.0/24",
                "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/virtualNetworks/AP-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ],
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "ERGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "enable_bgp": false,
            "generation": "None",
            "id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/virtualNetworkGateways/AP-ERGW",
            "ip_configuration": [
              {
                "name": "AP-ERGW-pip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/publicIPAddresses/AP-ERGW-pip",
                "subnet_id": "/subscriptions/5724b903-4538-4a5e-a901-8800185b5788/resourceGroups/AP-kthiramitsu/providers/Microsoft.Network/virtualNetworks/AP-vnet/subnets/GatewaySubnet"
              }
            ],
            "location": "japanwest",
            "name": "AP-ERGW",
            "private_ip_address_enabled": false,
            "resource_group_name": "AP-kthiramitsu",
            "sku": "Standard",
            "type": "ExpressRoute",
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.AP-ERGW-pip",
            "azurerm_subnet.GatewaySubnet"
          ]
        }
      ]
    }
  ]
}